--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>The Aviator: Part 1 | Codrops</title>
-		<meta name="description" content="Demo of part 1: The Making of 'The Aviator': Animating a Basic 3D Scene with Three.js" />
-		<meta name="keywords" content="three.js, webgl, tutorial, game, 3d, animation, airplane, web development, javascript" />
-		<meta name="author" content="Karim Maaloul for Codrops" />
+		<title>Experimental Web Opdracht</title>
+		<meta name="description" content="Experimental Web Opdracht" />
+		<meta name="keywords" content="three.js, webgl, christmascard, 3d, animation, web development, javascript" />
+		<meta name="author" content="Lars & Louise" />
 		<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<!--[if IE]>
@@ -15,7 +15,9 @@
 		<![endif]-->
 	</head>
 	<body>
-		<div class="world" id="world"></div>
+		<div id="snow"></div>
+		<div id="container"></div>
+		<!-- <div class="world" id="world"></div> -->
 		<script type="text/javascript" src="js/three.min.js"></script>
 		<script type="text/javascript" src="js/script.js"/></script>
 	</body>
