--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Experimental Web Opdracht" />
 		<meta name="keywords" content="three.js, webgl, christmascard, 3d, animation, web development, javascript" />
 		<meta name="author" content="Lars & Louise" />
-		<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700italic' rel='stylesheet' type='text/css'>
+		<!-- <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700italic' rel='stylesheet' type='text/css'> -->
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<!--[if IE]>
   		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -19,6 +19,9 @@
 		<div id="container"></div>
 		<!-- <div class="world" id="world"></div> -->
 		<script type="text/javascript" src="js/three.min.js"></script>
+		<script type="text/javascript" src="js/TweenMax.min.js"></script>
+		<script type="text/javascript" src="js/threeCSG.js"></script>
+		<!-- <script type="text/javascript" src="js/Head.js"></script> -->
 		<script type="text/javascript" src="js/script.js"/></script>
 	</body>
 </html>
