Hij is aanwezig in Ktown, particle files present, connection to js file does not work

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,17 @@
 
 	</head>
 	<body>
-		<div id="snow"></div>
+		<div id="particles-js"></div>
 		<div id="container"></div>
 		<!-- <div class="world" id="world"></div> -->
 
 		<script type="text/javascript" src="./js/vendors/three.min.js"></script>
 		<script type="text/javascript" src="./js/vendors/TweenMax.min.js"></script>
 		<script type="text/javascript" src="./js/vendors/threeCSG.js"></script>
+
+		<!-- <script src="particles.js"></script> -->
+		<!-- <script src="../node_modules/particles.js"></script> -->
+
 		<script type="text/javascript" src="./js/script.js"/></script>
 	</body>
 </html>
