--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,6 @@
 
 	</head>
 	<body>
-		<div id="particles-js"></div>
 		<div id="container"></div>
 		<!-- <div class="world" id="world"></div> -->
 
@@ -24,9 +23,8 @@
 		<script type="text/javascript" src="./js/vendors/TweenMax.min.js"></script>
 		<script type="text/javascript" src="./js/vendors/threeCSG.js"></script>
 
-		<!-- <script src="particles.js"></script> -->
+		<script src="./js/vendors/particles.min.js"></script>
 		<!-- <script src="../node_modules/particles.js"></script> -->
-
 		<script type="text/javascript" src="./js/script.js"/></script>
 	</body>
 </html>
