--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,20 @@
 
 	</head>
 	<body>
-		<audio src="">
+		<div class="SpRecognition">
+			<textarea name="name" id="field" rows="8" cols="80"></textarea>
+			<button type="button" id="record">Record</button>
+		</div>
 
-		</audio>
+
 		<div id="container"></div>
 		<!-- <div class="world" id="world"></div> -->
-
-		<script type="text/javascript" src="./js/vendors/three.min.js"></script>
-		<script type="text/javascript" src="./js/vendors/TweenMax.min.js"></script>
-		<script type="text/javascript" src="./js/vendors/threeCSG.js"></script>
-
+		<script src="./js/vendors/three.min.js"></script>
+		<script src="./js/vendors/TweenMax.min.js"></script>
+		<script src="./js/vendors/threeCSG.js"></script>
+		<!-- <script src="./js/vendors/recorderjs/recorder.js"></script> -->
 		<script src="./js/vendors/particles.min.js"></script>
-		<script type="text/javascript" src="./js/script.js"/></script>
 
+		<script src="./js/script.js"/></script>
 	</body>
 </html>
