--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 		<div class="SpRecognition">
 			<textarea name="name" id="field" rows="8" cols="80"></textarea>
 			<button type="button" id="record">Record</button>
+			<button type="button" id="save">Save</button>
 		</div>
 
 
