--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
 
 	</head>
 	<body>
+		<h1>Stuur jou unieke santa naar jou vrienden met deze link <a href="" class="unique_link"></a></h1>
 		<div class="SpRecognition">
+			<input type="text" name="name" value="" id="name_input">
 			<textarea name="name" id="field" rows="8" cols="80"></textarea>
 			<button type="button" id="record">Record</button>
 			<button type="button" id="save">Save</button>
