trying different things

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,8 @@
 		<script type="text/javascript" src="./js/vendors/three.min.js"></script>
 		<script type="text/javascript" src="./js/vendors/TweenMax.min.js"></script>
 		<script type="text/javascript" src="./js/vendors/threeCSG.js"></script>
-
-		<script src="./js/vendors/particles.min.js"></script>
-		<!-- <script src="../node_modules/particles.js"></script> -->
+		<script type="text/javascript" src="./js/vendors/particles.min.js"></script>
+		<!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js'></script> -->
 		<script type="text/javascript" src="./js/script.js"/></script>
 	</body>
 </html>
