--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,7 +16,12 @@
 
 	</head>
 	<body>
-		<h1>Stuur jou unieke santa naar jou vrienden met deze link <a href="" class="unique_link"></a></h1>
+		<button type="button" id="play">Play</button>
+		<button type="button" id="stop">Stop</button>
+		<button type="button" id="audio">Record</button>
+		<button type="button" id="save_audio">Save</button>
+
+		<h1 class="to">Stuur jou unieke santa naar jou vrienden met deze link <a href="" class="unique_link"></a></h1>
 		<div class="SpRecognition">
 			<input type="text" name="name" value="" id="name_input">
 			<textarea name="name" id="field" rows="8" cols="80"></textarea>
