--- a/src/santa.html
+++ b/src/santa.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-  <h1>You got a Santa from</h1>
+  <h1 class="from">You got a Santa from</h1>
   <h2 id="title"></h2>
 
   <script src="./js/santa.js"></script>
