dat.gui control base

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -35,6 +35,7 @@
 		<script src="./js/vendors/three.min.js"></script>
 		<script src="./js/vendors/TweenMax.min.js"></script>
 		<script src="./js/vendors/threeCSG.js"></script>
+		<script src="./js/vendors/dat.gui.min.js"></script>
 		<!-- <script src="./js/vendors/recorderjs/recorder.js"></script> -->
 		<script src="./js/vendors/particles.min.js"></script>
 
