--- a/server/public/santa.html
+++ b/server/public/santa.html
@@ -8,6 +8,7 @@
 
   <h1 class="from">You got a Santa from</h1>
   <h2 id="title"></h2>
+  <button type="button" id="play_santa">Play sound</button>
 
   <script src="./js/santa.js"></script>
   </body>
