--- a/server/public/santa.html
+++ b/server/public/santa.html
@@ -9,7 +9,9 @@
   <h1 class="from">You got a Santa from</h1>
   <h2 id="title"></h2>
   <button type="button" id="play_santa">Play sound</button>
+  <audio src="" id="santa_audio" controls>
 
+  </audio>
   <script src="./js/santa.js"></script>
   </body>
 </html>
