--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
 
 	</head>
 	<body>
+		<audio src="" id="audio_controls" controls>
+
+		</audio>
 		<section class="topbuttons">
 			<button type="button" id="play">Play</button>
 			<button type="button" id="stop">Stop</button>
