--- a/src/index.html
+++ b/src/index.html
@@ -40,13 +40,12 @@
 		</div>
 
 		<div id="container"></div>
-		<!-- <div class="world" id="world"></div> -->
+
 		<script src="./js/vendors/three.min.js"></script>
 		<script src="./js/vendors/TweenMax.min.js"></script>
 		<script src="./js/vendors/threeCSG.js"></script>
 		<script src="./js/vendors/dat.gui.min.js"></script>
-		<!-- <script src="./js/vendors/recorderjs/recorder.js"></script> -->
-		<script type="text/javascript" src="./js/vendors/particles.min.js"></script>
+		<script src="./js/vendors/particles.min.js"></script>
 
 		<script src="./js/script.js"/></script>
 	</body>
