--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Experimental Web Opdracht" />
 		<meta name="keywords" content="three.js, webgl, christmascard, 3d, animation, web development, javascript" />
 		<meta name="author" content="Lars & Louise" />
-<link href="https://fonts.googleapis.com/css?family=Barlow:300i,400" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Barlow:300i,400" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<!--[if IE]>
   		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,9 +16,8 @@
 
 	</head>
 	<body>
-		<audio src="" id="audio_controls" controls>
+		<audio src="" id="audio_controls" controls></audio>
 
-		</audio>
 		<section class="topbuttons">
 			<button type="button" id="play">Play</button>
 			<button type="button" id="stop">Stop</button>
@@ -39,6 +38,7 @@
 			</div>
 		</div>
 
+		<div id="particles-js"></div>
 		<div id="container"></div>
 
 		<script src="./js/vendors/three.min.js"></script>
