--- a/server/public/santa.html
+++ b/server/public/santa.html
@@ -7,11 +7,17 @@
   <body>
 
   <h1 class="from">You got a Santa from</h1>
-  <h2 id="title"></h2>
-  <button type="button" id="play_santa">Play sound</button>
-  <audio src="" id="santa_audio" controls>
+  <h1 id="name"></h1>
+  <audio src="" id="santa_audio" controls></audio>
 
-  </audio>
+  <div id="particles-js"></div>
+  <div id="container"></div>
+
+  <script src="./js/vendors/three.min.js"></script>
+  <script src="./js/vendors/TweenMax.min.js"></script>
+  <script src="./js/vendors/threeCSG.js"></script>
+  <script src="./js/vendors/particles.min.js"></script>
+
   <script src="./js/santa.js"></script>
   </body>
 </html>
