--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,6 @@
 	<body>
 		<audio src="" id="audio_controls" controls></audio>
 
-		<section class="topbuttons">
-			<button type="button" id="play">Play</button>
-			<button type="button" id="stop">Stop</button>
-			<button type="button" id="audio">Record</button>
-			<button type="button" id="save_audio">Save</button>
-		</section>
-
 		<section class="link">
 			<h1 class="to">Stuur jouw unieke santa naar je vrienden met deze link <a href="" class="unique_link"></a></h1>
 		</section>
@@ -33,8 +26,8 @@
 			<input type="text" name="name" value="" id="name_input" placeholder="Jouw naam" class="border">
 			<textarea name="name" id="field" rows="10" cols="80" name="text" placeholder="Jouw boodschap" class="border"></textarea>
 			<div class="buttonsGroup">
-				<button class="button" type="button" id="record">Record</button>
-				<button class="button" type="button" id="save">Save</button>
+				<button class="button" type="button" id="record">Spreek een boodschap in</button>
+				<button class="button" type="button" id="save">Opslaan</button>
 			</div>
 		</div>
 
