--- a/src/index.html
+++ b/src/index.html
@@ -9,38 +9,30 @@
 	<meta name="description" content="Experimental Web Opdracht" />
 	<meta name="keywords" content="three.js, webgl, christmascard, 3d, animation, web development, javascript" />
 	<meta name="author" content="Lars & Louise" />
-	<link href="https://fonts.googleapis.com/css?family=Barlow:300i,400" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	<!--[if IE]>
-  		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
 
 </head>
 
 <body>
 	<section class="information">
-		<div class="information-uitleg">
-			<div class="information-uitleg-text">
-				<h1>TITEL VAN DE APPLICATIE</h1>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-				</p>
-			</div>
-			<img src="assets/arrow.png" alt="Arrow" height="80" width="80">
-		</div>
+		<section class="information-content">
+			<div class="SpRecognition">
+				<div class="recipient">
+					<label for="recipient">Dear</label>
+					<input type="text" name="recipient" value="" id="recipient_input" placeholder="recipient's name" class="border">
+				</div>
 
-		<div class="SpRecognition">
+				<label for="recipient">What I would like to say is..</label>
+				<textarea name="message" id="field" rows="5" cols="50" name="text" placeholder="Your message" class="border"></textarea>
 
-			<label for="recipient">Dear,</label>
-			<input type="text" name="recipient" value="" id="recipient_input" placeholder="recipient's name" class="border">
+				<div class="recording">
+					<button class="button" type="button" id="record">Record message</button>
+					<audio src="" id="audio_controls" controls></audio>
+				</div>
 
-			<label for="recipient">I would like to say..</label>
-			<textarea name="message" id="field" rows="10" cols="80" name="text" placeholder="Your message" class="border"></textarea>
-
-			<button class="button" type="button" id="record">Record your message</button>
-
-			<section class="sound-adjustments">
-				<select name="biquadType" id="biquadType">
+				<section class="sound-adjustments">
+					<select name="biquadType" id="biquadType">
 						<option value="lowpass">lowpass</option>
 						<option value="highpass">highpass</option>
 						<option value="bandpass">bandpass</option>
@@ -50,24 +42,34 @@
 						<option value="notch">notch</option>
 						<option value="allpass">allpass</option>
 					</select>
-				<input type="range" name="" value="350" min="350" max="30000" id="biquadValue">
+					<input type="range" name="" value="350" min="350" max="30000" id="biquadValue">
+				</section>
+
+				<div class="sender">
+					<label class="senderLabel"for="name">Love,</label>
+					<input type="text" name="name" value="" id="name_input" placeholder="Your name" class="border">
+				</div>
+
+				<button class="button" type="button" id="save">Save message</button>
+			</div>
+
+			<section class="link">
+				<h1 class="to">Stuur jouw unieke santa naar je vrienden met deze link <a href="" class="unique_link"></a></h1>
 			</section>
-				<audio src="" id="audio_controls" controls></audio>
-
-
-			<label for="name">Love,</label>
-			<input type="text" name="name" value="" id="name_input" placeholder="Your name" class="border">
-
-			<button class="button" type="button" id="save">Opslaan</button>
-		</div>
-
-		<section class="link">
-			<h1 class="to">Stuur jouw unieke santa naar je vrienden met deze link <a href="" class="unique_link"></a></h1>
 		</section>
-
 	</section>
+
 	<div id="particles-js"></div>
-	<div id="container"></div>
+	<div id="container">
+		<section class="information-uitleg">
+			<div class="information-uitleg-text">
+				<h1>Magical Santa card</h1>
+				<p>
+					Use your own voice to record your personal message & customize Santa's looks with the controls you find at the top.
+				</p>
+			</div>
+		</section>
+	</div>
 	<script src="./js/vendors/three.min.js"></script>
 	<script src="./js/vendors/TweenMax.min.js"></script>
 	<script src="./js/vendors/threeCSG.js"></script>
