--- a/src/santa.html
+++ b/src/santa.html
@@ -8,7 +8,7 @@
 
   <h1 class="from">You got a Santa from</h1>
   <h1 id="name"></h1>
-  <audio src="" id="santa_audio" controls></audio>
+  <!-- <audio src="" id="santa_audio" controls></audio> -->
   <button type="button" id="audio">Play</button>
   <button type="button" id="repeat">Repeat</button>
 
