--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,7 @@
 		<section class="information-content">
 			<div class="SpRecognition">
 				<div class="recipient">
-					<label for="recipient">Dear</label>
-					<input type="text" name="recipient" value="" id="recipient_input" placeholder="recipient's name" class="border">
+					<p>Dear fellow human,</p>
 				</div>
 
 				<label for="recipient">What I would like to say is..</label>
