--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Experimental Web Opdracht</title>
 		<meta name="description" content="Experimental Web Opdracht" />
-		<meta name="keywords" content="three.js, webgl, christmascard, 3d, animation, web development, javascript" />
+		<meta name="keywords" content="threejs, webgl, christmascard, 3D, animation, web development, javascript" />
 		<meta name="author" content="Lars & Louise" />
 		<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -17,7 +17,8 @@
 		<section class="information-content">
 			<div class="SpRecognition">
 				<div class="recipient">
-					<p>Dear fellow human,</p>
+					<label for="recipient">Dear</label>
+					<input type="text" name="recipient" value="" id="recipient_input" placeholder="recipient's name" class="border">
 				</div>
 
 				<label for="recipient">What I would like to say is..</label>
