Styling 2nd page

--- a/server/public/santa.html
+++ b/server/public/santa.html
@@ -15,7 +15,7 @@
             <p id="to"></p>
           </div>
 
-          <p for="recipient">What I would like to say is..</p>
+          <p class="message" for="recipient">What I would like to say is..</p>
 
           <section class="sound-adjustments">
             <button type="button" id="audio">Play</button>
@@ -24,11 +24,14 @@
 
           <div class="sender">
             <p class="senderLabel"for="name">Love,</p>
-            <h1 id="from"></h1>
+            <p id="from"></p>
           </div>
 
         <section class="link">
-          <h1 class="new">Send your own Santa<a href="https://experimentalweb.herokuapp.com/"></a></h1>
+          <h1 class="newLink">
+            Wanna send your own Santa to a loved one ?
+          </h1>
+          <a href="https://experimentalweb.herokuapp.com/"><h1 class="new">Click on this link</a></h1>
         </section>
       </section>
     </section>
