--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Experimental Web Opdracht" />
 		<meta name="keywords" content="threejs, webgl, christmascard, 3D, animation, web development, javascript" />
 		<meta name="author" content="Lars & Louise" />
-		<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Kalam:300,400" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 
 	</head>
@@ -58,7 +58,7 @@
 			</div>
 
 			<section class="link">
-				<h1 class="to">Send your personal Santa with this link</h1><a href="" class="unique_link"></a>
+				<h1>Send your personal Santa with this link</h1><a href="" class="unique_link"></a>
 			</section>
 		</section>
 	</section>
