--- a/src/santa.html
+++ b/src/santa.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Santa</title>
-    <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kalam:300,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
@@ -15,7 +15,8 @@
             <p id="to"></p>
           </div>
 
-          <p class="message" for="recipient">What I would like to say is..</p>
+          <label class="message" for="recipient">What I would like to say is..</label>
+          <p id="message"></p>
 
           <section class="sound-adjustments">
             <button type="button" id="audio">Play</button>
@@ -23,7 +24,7 @@
           </section>
 
           <div class="sender">
-            <p class="senderLabel"for="name">Love,</p>
+            <label class="senderLabel"for="name">Love,</label>
             <p id="from"></p>
           </div>
 
