--- a/src/notFound.html
+++ b/src/notFound.html
@@ -6,17 +6,21 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-
     <div id="particles-js"></div>
   	<div id="container">
   		<section class="information-uitleg">
   		</section>
 
-    <script src="./js/vendors/three.min.js"></script>
-    <script src="./js/vendors/TweenMax.min.js"></script>
-    <script src="./js/vendors/threeCSG.js"></script>
-    <script src="./js/vendors/particles.min.js"></script>
+      <div class="homeLink">
+        <a href="https://experimentalweb.herokuapp.com/">Go back to the original page -></a>
+      </div>
 
-    <script src="./js/notFound.js"></script>
+      <script src="./js/vendors/three.min.js"></script>
+      <script src="./js/vendors/TweenMax.min.js"></script>
+      <script src="./js/vendors/threeCSG.js"></script>
+      <script src="./js/vendors/particles.min.js"></script>
+
+      <script src="./js/notFound.js"></script>
+    </div>
   </body>
 </html>
