--- a/src/santa.html
+++ b/src/santa.html
@@ -10,28 +10,31 @@
     <section class="information">
       <section class="information-content">
         <div class="SpRecognition">
+
           <div class="recipient">
             <label for="recipient">Dear</label>
             <p id="to"></p>
           </div>
 
-          <label class="message" for="recipient">What I would like to say is..</label>
-          <p id="message"></p>
+          <div class="message">
+            <label class="message" for="recipient">What I would like to say is..</label>
+            <p id="message"></p>
+          </div>
 
-          <section class="sound-adjustments">
+          <section class="sound-play">
             <button type="button" id="audio">Play</button>
             <button type="button" id="repeat">Repeat</button>
           </section>
 
           <div class="sender">
-            <label class="senderLabel"for="name">Love,</label>
+            <label class="sender"for="name">Love,</label>
             <p id="from"></p>
           </div>
 
         <section class="link">
-          <h1 class="newLink">
+          <p class="newLink">
             Wanna send your own Santa to a loved one ?
-          </h1>
+          </p>
           <a href="https://experimentalweb.herokuapp.com/"><h1 class="new">Click on this link</a></h1>
         </section>
       </section>
