--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 			</div>
 
 			<section class="link">
-				<h1>Send your personal Santa with this link</h1><a href="" class="unique_link"></a>
+				<h1>Press the save button to generate the share link</h1><a href="" class="unique_link"></a>
 			</section>
 		</section>
 	</section>
