--- a/src/santa.html
+++ b/src/santa.html
@@ -27,7 +27,7 @@
           </section>
 
           <div class="sender">
-            <label class="sender"for="name">Love,</label>
+            <label class="senderLabel"for="name">Love,</label>
             <p id="from"></p>
           </div>
 
@@ -36,6 +36,7 @@
             Wanna send your own Santa to a loved one ?
           </p>
           <a href="https://experimentalweb.herokuapp.com/"><h1 class="new">Click on this link</a></h1>
+
         </section>
       </section>
     </section>
